Source/WebCore/rendering/RenderFlowThread.cpp
@@ -251,10 +251,9 @@ void RenderFlowThread::layout()
 #if USE(ACCELERATED_COMPOSITING)
 bool RenderFlowThread::hasCompositingRegionDescendant() const
 {
-    for (auto iter = m_regionList.begin(), end = m_regionList.end(); iter != end; ++iter)
-        if (RenderLayerModelObject* layerOwner = toRenderNamedFlowFragment(*iter)->layerOwner())
-            if (layerOwner->hasLayer() && layerOwner->layer()->hasCompositingDescendant())
-                return true;
+    for (auto& region : m_regionList)
+        if (toRenderNamedFlowFragment(region)->layerOwner().layer()->hasCompositingDescendant())
+            return true;
 
     return false;
 }
